# 996.MAP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: data-pipeline.yml
config/: env.template
public/: companies.geojson  index.html
scripts/: 1-parse-blacklist.py  2-geocode.py  3-generate-geojson.py
